[project]
name = "agenticmap"
version = "0.0.0"
description = "Security audit for AI / agentic systems — dual-pipeline dynamic red-teaming + static architecture audit."
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Isao Takaesu" },
]
license = { text = "TBD" }
keywords = [
    "ai-security",
    "llm-security",
    "agent-security",
    "red-teaming",
    "prompt-injection",
    "mcp",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Information Technology",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
]

dependencies = [
    "pydantic>=2.7",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "typer>=0.12",
    "rich>=13.7",
    "networkx>=3.3",
]

[project.optional-dependencies]
openai = ["openai>=1.40"]
anthropic = ["anthropic>=0.34"]
bedrock = ["boto3>=1.34"]
ollama = ["ollama>=0.3"]
all = [
    "openai>=1.40",
    "anthropic>=0.34",
    "boto3>=1.34",
    "ollama>=0.3",
]

[project.scripts]
agenticmap = "agenticmap.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agenticmap"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
